# robotarm

./: CMakeLists.txt  package.xml
config/: joints.yaml  turntable.yaml
gazebo_worlds/: test_empty.world
img/: hough_accumulator_plot-1.eps  onlyboxes.eps  onlychess.eps  topview.eps  topview_empty.eps
launch/: control.launch  diplay.launch  display.launch  gazebo.launch  spawnGazebo.launch
nodes/: joint_states_listener.py
rviz/: urdf.rviz
src/: ComputerVison.py  a.out  datafile2.txt  getRobotRBT.m  getRobotRBT.prj  inverse_kinematics.py  joint_states_listener.py  main.cpp  matlabIK.m  plot_robot_data.py  position_controller.py  testing.py
src/Matlab/: 271117zUPnDown.mat  RRT3D.m  UpAndDownZaxis.mat  calculateJointPaths.m  configurationDebug.m  directKinematics.m  feedforward.m  generateForwardkinematics.m  getIKJointAngles.m  getIKJointAngles.m~  getTransformationMatrix.m  getqdLast.m  getqdNext.m  gravityCompensation.m  initi.m  robotInit.m  robotInit.m~  rosInit.m  runControl.m  runControl.m~  someKindOfFeedForward.m  tempest.mat  torque_saturation.m
src/Misc Files/: ComputerVison.py
src/getRobotRBT/: PackagingLog.html
src/getRobotRBT/for_redistribution/: MyAppInstaller_web.install
src/getRobotRBT/for_redistribution_files_only/: readme.txt  setup.py
src/getRobotRBT/for_redistribution_files_only/getRobotRBT/: __init__.py  getRobotRBT.ctf
src/misc/: ComputerVison.py
stl_files/: 25Girder.igs  MX64-Wrist Rotate.stl  Turntable.stl
urdf/: materials.xacro  matlabURDF.urdf  matlabURDFShow.urdf  pickup_box.urdf  pubox.sdf  robotarm.urdf.xacro  simp_inert.urdf.xacro  simpleRobot.dae  simpleRobot.rounded.dae  test.urdf.xacro
