<package>
  <name>five_dof_robotarm</name>
  <version>0.3.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="magnusaar@gmail.com">Magnus Aar!!</author>

  <maintainer email="magnusaar@gmail.com">Magnus Aar!!</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
